--- a/polls/static/css/style.css
+++ b/polls/static/css/style.css
@@ -1,3 +1,9 @@
+body{
+    background-image: url("https://images.unsplash.com/photo-1518065896235-a4c93e088e7a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9");
+    background-color: #f8f8f8;
+    margin-top: 14px;
+}
+
 .container h1{
     text-align: center;
     padding: 0;
@@ -22,11 +28,7 @@
     
 }
 
-body{
-    background-image: url("https://images.unsplash.com/photo-1518065896235-a4c93e088e7a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9");
-    background-color: #f8f8f8;
-    margin-top: 14px;
-}
+
 
 h4{
     font-style: italic;
@@ -69,6 +71,12 @@ ul{
     padding: 0;
     list-style-type: none;
 }
+a{
+    color: black;
+    display: inline-block;
+
+}
+
 
 .social{
     width: 30px;
