--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="staticfiles/css/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="
     sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"  >
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" >
 </head>
 <body>
     <!-- <div class="container">
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card card-body" id="profile-wrapper">
-                    <img id="profile-pic" src="{%static 'images/profilepicture.jpg' %}" >
+                    <img id="profile-pic" src="{%static 'images/me.jpg' %}" >
                     <h4>Hi, I'm josh.</h4>
                     <!-- <p>I love doing research and learning more about coding</p> -->
                 </div>
@@ -28,7 +28,7 @@
 
             </div>
             <div class="col-md-9">
-                <div class="card card-body">
+                <div class="card card-body h-100">
                     <h3>My Biography</h3>
                     <br>
                     <p>      </p>
@@ -38,8 +38,23 @@
                     <p>    </p>
 
                     <ul class="social-links">
-                        <li><img class="social" src="{% static 'images/github.png' %}"></li>
-                        <li><img class="social" src="{% static 'images/fiver.png' %}"></li>
+                        <li>
+                            <img class="social" src=" {% static 'images/github.png' %}">
+                            <p>
+                                <a class='link' href="https://github.com/bouncei">github</a>
+                            </p>
+                        </li>
+                        <!-- <p>
+                            <a class='link' href="https://github.com/bouncei">github</a>
+                        </p> -->
+
+
+                        <li>
+                            <img class="social" src="{% static 'images/fiver.png' %}">
+                            <p>
+                                <a class='link' href="#">fiver</a>
+                            </p>
+                        </li>
 
                     </ul>
 
@@ -54,11 +69,11 @@
         <br>
         <div class="row">
             <div class="col-md-4">
-                <div class="card card-body"></div>
+                <div class="card card-body h-100"></div>
 
             </div>
             <div class="col-md-8">
-                <div class="card card-body">
+                <div class="card card-body h-100">
                     <h3>What I know</h3>
 
 
@@ -71,16 +86,7 @@
         <br>
         <br>
 
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card card-body"></div>
-
-            </div>
-            <div class="col-md-8">
-                <div class="card card-body"></div>
-
-            </div>
-        </div>
+        
         
     </div>
     
