--- a/polls/static/css/style.css
+++ b/polls/static/css/style.css
@@ -26,14 +26,10 @@ body{
     font-size: x-large;
 }
 
-
-
 .col-md-9{
     border-radius: 90%;
     
 }
-
-
 
 h4{
     font-style: italic;
@@ -60,12 +56,14 @@ h4{
 .row h3{
     padding-bottom: 8px;
     border-bottom: solid 0.2px rgba(0, 0, 0, 0.185);
+    color: rosybrown;
 }
 p{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
     font-style: normal;
     font-size: medium;
+    color:white;
 }
 
 .row{
@@ -98,5 +96,5 @@ a{
 
 #my_bio{
     /* background-color: blue; */
-    box-shadow: 0 10px 20px rgba(34, 156, 40, 0.19), 0 6px 6px rgba(168, 12, 12, 0.23);
+    background-color: rgba(0, 0, 0, 0.185);
 }
