--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -74,13 +74,13 @@
         <br>
         <div class="row">
             <div class="col-md-4">
-                <div class="card card-body h-100">
+                <div id="my_bio" class="card card-body h-100">
                     <h3>My First Project </h3>
                 </div>
 
             </div>
             <div class="col-md-8">
-                <div class="card card-body h-100">
+                <div id="my_bio" class="card card-body h-100">
                     <h3>What I know</h3>
 
 
