--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bouncey Status</title>
+    <title>Bouncey Portfolio</title>
     <!-- <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
     <!-- <link rel="stylesheet" type="text/css" href="staticfiles/css/style.css"> -->
@@ -96,6 +96,8 @@
         
         
     </div>
+
+    <footer id="footer">Copyright © 2020 All Right Reserved</footer>
     
 </body>
 
