--- a/polls/static/css/style.css
+++ b/polls/static/css/style.css
@@ -98,3 +98,13 @@ a{
     /* background-color: blue; */
     background-color: rgba(0, 0, 0, 0.185);
 }
+
+#footer{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-style: normal;
+    font-size: medium;
+    color:white;
+    text-align: center;
+
+}
