--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,120 +1,131 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Bouncey Portfolio</title>
-    <!-- <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
-    <!-- <link rel="stylesheet" type="text/css" href="staticfiles/css/style.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" >
-</head>
-<body>
+    <head>
+        <title>Bouncey Portfolio</title>
+        <!-- <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="staticfiles/css/style.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}" >
+    </head>
+    <body>
+        <main>
 
-    <div class="topnav d-flex flex-row-reverse">
-        <a class="" href="#home">Home</a>
-        <a class="active" href="#news">News</a>
-        <a class="active" href="#contact">Contact</a>
-        <a class="active" href="#about">About</a>
-    </div>
-    <!-- <div class="container">
-        <h1 style ="text-align: centre"> Welcome!</h1>
-        <p> Hello, I'm a freelancing web developer, welcome to my web page.</p>
-    </div> -->
-
-    <div class="container">
-        <div class="row 1">
-                <div id="my_id">
-                    <img id="profile-pic" src="{%static 'images/me.jpg' %}" >
+        <!-- <div class="topnav d-flex flex-row-reverse">
+                <a class="" href="#home">Home</a>
+                <a class="active" href="#news">News</a>
+                <a class="active" href="#contact">Contact</a>
+                <a class="active" href="#about">About</a>
+            </div> -->
+            <header id="header">
+                <nav class="navbar fixed-top">             
+                    <ul id="unordered-list">
                     
-                    <h3>
-                        Hi guys!
-                    </h3>
-                </div>
+                        <a href="#" >
+                            <li><i class="fas fa-address-book"></i>CONTACT ME</li>
+                        </a> 
+                        
+                    </ul>
+                    
+                </nav>
+            </header> 
             
+            <div class="container">
+                <div class="row 1">
+                    <div id="my_id">
+                        <img id="profile-pic" src="{%static 'images/me.jpg' %}" >
+                        
+                        <h3>
+                            Hi guys!
+                        </h3>
+                    </div>
+                    
+                    
+                    
+                    
+                    <div class="col-md-9">
+                        <div id="my_bio" class="card card-body h-100">
+                            <h3>My Biography</h3>
+                            <br>
+                            <p>
+                                I'm a knowledgeable Web Developer who brings superior front- and back-end design to promote organization-specific website presence. 
+                                Thorough comprehension of complex HTML, CSS and JavaScript programming languages to generate catered webpage design.
+                                Extensive collaboration with python, JavaScript and HTML/CSS to ascertain company expectations and oversee site creation, from initial planning through rollout and support. Detail-oriented approach to maintaining website responsiveness, effectiveness and security.
+                            </p>
+                            <p>
+                                An ambitious web developer who brings enthusiasm and detailed understanding of various programming languages to webpage planning, development and maintenance. 
+                                Experience designing and developing sites from concept to roll out. 
+                                Foundational grasp of various CSS and HTML options, plugins, development platforms and security requirements according to up-to-date standards. 
+                                Data-driven individual with excellent grasp of Google Analytics and other search optimization needs.
+                            </p>
                             
-                    
-                        
-                <div class="col-md-9">
-                    <div id="my_bio" class="card card-body h-100">
-                        <h3>My Biography</h3>
-                        <br>
-                        <p>
-                            I'm a knowledgeable Web Developer who brings superior front- and back-end design to promote organization-specific website presence. 
-                            Thorough comprehension of complex HTML, CSS and JavaScript programming languages to generate catered webpage design.
-                            Extensive collaboration with python, JavaScript and HTML/CSS to ascertain company expectations and oversee site creation, from initial planning through rollout and support. Detail-oriented approach to maintaining website responsiveness, effectiveness and security.
-                        </p>
-                        <p>
-                            An ambitious web developer who brings enthusiasm and detailed understanding of various programming languages to webpage planning, development and maintenance. 
-                            Experience designing and developing sites from concept to roll out. 
-                            Foundational grasp of various CSS and HTML options, plugins, development platforms and security requirements according to up-to-date standards. 
-                            Data-driven individual with excellent grasp of Google Analytics and other search optimization needs.
-                        </p>
-
-
-                        <ul class="social-links">
-                            <li>
-                                <a href="https://github.com/bouncei" class="social">
-                                    <img src=" {% static 'images/github.png' %}" alt="github" >
-                                </a>
-
-                                </li>
-                        
-                                
+                            
+                            <ul class="social-links">
                                 <li>
-                                    <a href="https://www.linkedin.com/in/joshua-inyang-2753841b7" class="social">
-                                        <img src="{% static 'images/linkedinicon.png' %}" alt="linkedin">
-        
-                                    </a>
-                                </li>
+                                    <a href="https://github.com/bouncei" class="social">
+                                            <img src=" {% static 'images/github.png' %}" alt="github" >
+                                        </a>
+                                        
+                                    </li>
+                                    
+                                    
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/joshua-inyang-2753841b7" class="social">
+                                            <img src="{% static 'images/linkedinicon.png' %}" alt="linkedin">
+                                            
+                                        </a>
+                                    </li>
+                                    
+                                    <li>
+                                        <a href="#" class="social">
+                                            <img src=" {% static 'images/fiver.png' %}" alt="fiver" >
+                                        </a>
+                                    </li>
+                                    
+                                    
+                                </ul>
+                        
+                            </div>
+                            
+                        </div>
+                    
+                    </div>
+                    <br>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div id="my_bio" class="card card-body h-100">
+                                <h3>My First Project </h3>
+                            </div>
+                            
+                        </div>
+                        <div class="col-md-8">
+                            <div id="my_bio" class="card card-body h-100">
+                                <h3>What I know</h3>
+                                
+                                
+                                <p>Python, C, HTML/CSS, Flutter, Angular and Javascript </p>
+                                <p>Ps: Working on Go, Machine learning, NodeJS, React, SQL, Kotline, Java, TypeScript and Swift. </p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    
+                </div>
+                {% block content %}
 
-                            <li>
-                                <a href="#" class="social">
-                                    <img src=" {% static 'images/fiver.png' %}" alt="fiver" >
-                                </a>
-                            </li>
-
-
-                        </ul>
+                {% endblock %}
+                
+            </main>
             
-
-                    <p></p>
-                </div>
-
-            </div>
-
-
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-md-4">
-                <div id="my_bio" class="card card-body h-100">
-                    <h3>My First Project </h3>
-                </div>
-
-            </div>
-            <div class="col-md-8">
-                <div id="my_bio" class="card card-body h-100">
-                    <h3>What I know</h3>
-
-
-                    <p>Python, C, HTML/CSS, Flutter, Angular and Javascript </p>
-                    <p>Ps: Working on Go, Machine learning, NodeJS, React, SQL, Kotline, Java, TypeScript and Swift. </p>
-                </div>
-
-            </div>
-        </div>
-        <br>
-        <br>
-
-        
-        
-    </div>
-
-    <footer id="footer">Copyright © 2020 All Right Reserved</footer>
+            <footer id="footer">
+            
+                <h6>© 2020 All Right Reserved</h6>
+            </footer>
+    </body>
     
-</body>
-
 </html>
